--- a/webapp/static/css/custom.css
+++ b/webapp/static/css/custom.css
@@ -4,6 +4,23 @@
   margin-top: 10px;
 }
 
+.img-blur {
+  filter: blur(2px);
+  -webkit-filter: blur(2px);
+}
+
+.img-overlay-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-shadow: 0 0 3px #fff;
+}
+
+.img-overlay-icon a {
+  color: black;
+}
+
 #qrcode {
   transition-property: opacity;
   transition-duration: 1.15s;
@@ -18,7 +35,6 @@
   height: 200px;
   width: 200px;
 }
-
 
 #qrcode img {
   border-style: solid;
